Fixed Buttons to Not Overlap

--- a/assignments/Term_Project/weather/weather.css
+++ b/assignments/Term_Project/weather/weather.css
@@ -68,6 +68,7 @@ button::-moz-focus-inner {
     width: 85%; /* 30% */
     /* display: none; /* For Testing */
     min-height: 100%;
+    /*transition-timing-function: ease;*/
   }
 
   .tab-shade {
@@ -155,6 +156,8 @@ button::-moz-focus-inner {
   margin: 4px;
   cursor: pointer;
 
+  word-break: keep-all;
+  display: inline-block;
   border-radius: 4px;
 
   color: black;
